--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -181,3 +181,4 @@
     # fail2ban
     - name: Upload fail2ban jail.local
       copy: src=jail.local dest=/etc/fail2ban/jail.local mode=0644
+      notify: restart fail2ban
