--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,3 +3,6 @@
 
 - name: restart fail2ban
   service: name=fail2ban state=restarted
+
+- name: restart unattended-upgrades
+  service: name=unattended-upgrades state=restarted
