Fixed installing SSH public key
When ansible does a lookup (on the next step "user: install authorized key")
it does on the local computer not the remote server you are running
ansible commands on.

This means that to install an SSH public key you have to download
the public key on your local computer and then the lookup will work.

--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -4,10 +4,9 @@
   sudo: yes
   user: name=jenkins
 
-- name: "user: download public key from GitHub"
-  sudo: yes
-  sudo_user: jenkins
+- name: "user: download authorized key"
   get_url: url=https://raw.githubusercontent.com/plone/jenkins.plone.org/master/jenkins.plone.org.pub dest=/tmp/jenkins.authorized_keys
+  delegate_to: 127.0.0.1
 
 - name: "user: install authorized key"
   sudo: yes
