One keyword argument per line
This not only helps on readability but also helps on making future
diffs smaller and easier to scan.

Command and shell arguments are also on a new line as some of them
have keyword arguments and can be potentially quite long.

--- a/tasks/nodejs.yml
+++ b/tasks/nodejs.yml
@@ -2,35 +2,50 @@
 
 - name: "node.js: fetch sources"
   sudo: yes
-  get_url: url=http://nodejs.org/dist/node-latest.tar.gz dest=/tmp/
+  get_url:
+    url=http://nodejs.org/dist/node-latest.tar.gz
+    dest=/tmp/
 
 - name: "node.js: Unpack tarball"
   sudo: yes
-  command: tar zxf node-latest.tar.gz chdir=/tmp
+  command:
+    tar zxf node-latest.tar.gz
+    chdir=/tmp
 
 - name: "node.js: lookup directory name"
   sudo: yes
-  shell: ls /tmp | grep node-v
+  shell:
+    ls /tmp | grep node-v
   register: node_dir
 
 - name: "node.js: configure"
   sudo: yes
-  shell: ./configure --prefix=/usr/local chdir=/tmp/{{ node_dir.stdout }}
+  shell:
+    ./configure --prefix=/usr/local
+    chdir=/tmp/{{ node_dir.stdout }}
 
 - name: "node.js: make"
   sudo: yes
-  shell: /usr/bin/make chdir=/tmp/{{ node_dir.stdout }}
+  shell:
+    /usr/bin/make
+    chdir=/tmp/{{ node_dir.stdout }}
 
 - name: "node.js: make install"
   sudo: yes
-  shell: /usr/bin/make install chdir=/tmp/{{ node_dir.stdout }}
+  shell:
+    /usr/bin/make install
+    chdir=/tmp/{{ node_dir.stdout }}
 
 - name: "node.js: clean up node install"
-  shell: rm -rf /tmp/node-*
+  shell:
+    rm -rf /tmp/node-*
 
 - name: "Install NPM packages"
   sudo: yes
-  npm: name={{item}} global=yes state=present
+  npm:
+    name={{item}}
+    global=yes
+    state=present
   with_items:
     - bower
     - jshint
