--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -2,11 +2,15 @@
 
 - name: System update
   sudo: yes
-  apt: upgrade=dist update_cache=yes
+  apt:
+    upgrade=dist
+    update_cache=yes
 
 - name: Install dependencies
   sudo: yes
-  apt: name={{item}} state=present
+  apt:
+    name={{item}}
+    state=present
   with_items:
     # Java is needed in order to connect the Jenkins slaves to the master
     - openjdk-7-jre
@@ -64,7 +68,9 @@
 
 - name: Remove packages
   sudo: yes
-  apt: name={{item}} state=absent
+  apt:
+    name={{item}}
+    state=absent
   with_items:
     - python-software-properties
     - python-apt
@@ -75,45 +81,87 @@
 # https://github.com/plone/plone.app.form/blob/2.2.x/plone/app/form/widgets/datecomponents.txt
 - name: "Set timezone to US/Pacific"
   sudo: yes
-  copy: content='US/Pacific' dest=/etc/timezone owner=root group=root mode=0644 backup=yes
+  copy:
+    content='US/Pacific'
+    dest=/etc/timezone
+    owner=root
+    group=root
+    mode=0644
+    backup=yes
 
 - name: "Update timezone"
   sudo: yes
-  command: dpkg-reconfigure --frontend noninteractive tzdata
+  command:
+    dpkg-reconfigure --frontend noninteractive tzdata
 
 # UFW
 - name: Set UFW to deny all
   sudo: yes
-  ufw: state=enabled policy=deny
+  ufw:
+    state=enabled
+    policy=deny
+
 - name: Set UFW to allow OpenSSH
   sudo: yes
-  ufw: rule=allow name=OpenSSH
+  ufw:
+    rule=allow
+    name=OpenSSH
+
 - name: Set UFW to allow Port 80
   sudo: yes
-  ufw: rule=allow port=80 proto=tcp
+  ufw:
+    rule=allow
+    port=80
+    proto=tcp
+
 - name: Set UFW to allow Port 443
   sudo: yes
-  ufw: rule=allow port=443 proto=tcp
+  ufw:
+    rule=allow
+    port=443
+    proto=tcp
+
 - name: Set UFW to allow port 4949 from munin master
   sudo: yes
-  ufw: rule=allow src=162.209.104.107 proto=tcp port=4949
+  ufw:
+    rule=allow
+    src=162.209.104.107
+    proto=tcp
+    port=4949
 
 # fail2ban
 - name: Upload fail2ban jail.local
   sudo: yes
-  copy: src=jail.local dest=/etc/fail2ban/jail.local mode=0644
+  copy:
+    src=jail.local
+    dest=/etc/fail2ban/jail.local
+    mode=0644
   notify: restart fail2ban
 
 # unattended-upgrades
 - name: Configure unattended-upgrades auto-upgrades
   sudo: yes
-  copy: src=10periodic dest=/etc/apt/apt.conf.d/10periodic owner=root group=root mode=0644
+  copy:
+    src=10periodic
+    dest=/etc/apt/apt.conf.d/10periodic
+    owner=root
+    group=root
+    mode=0644
+
 - name: Upload unattended-upgrades configuration
   sudo: yes
-  copy: src=50unattended-upgrades dest=/etc/apt/apt.conf.d/50unattended-upgrades owner=root group=root mode=0644
+  copy:
+    src=50unattended-upgrades
+    dest=/etc/apt/apt.conf.d/50unattended-upgrades
+    owner=root
+    group=root
+    mode=0644
   notify: restart unattended-upgrades
 
 # tmpreaper
 - name: "Configure tmpreaper"
   sudo: yes
-  lineinfile: dest=/etc/tmpreaper.conf regexp=^TMPREAPER_TIME= line=TMPREAPER_TIME=24
+  lineinfile:
+    dest=/etc/tmpreaper.conf
+    regexp=^TMPREAPER_TIME=
+    line=TMPREAPER_TIME=24
