--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -5,28 +5,44 @@
   user: name=jenkins
 
 - name: "user: download authorized key"
-  get_url: url=https://raw.githubusercontent.com/plone/jenkins.plone.org/master/jenkins.plone.org.pub dest=/tmp/jenkins.authorized_keys
+  get_url:
+    url=https://raw.githubusercontent.com/plone/jenkins.plone.org/master/jenkins.plone.org.pub
+    dest=/tmp/jenkins.authorized_keys
   delegate_to: 127.0.0.1
 
 - name: "user: install authorized key"
   sudo: yes
   sudo_user: jenkins
-  authorized_key: user=jenkins key="{{ lookup('file', '/tmp/jenkins.authorized_keys') }}"
+  authorized_key:
+    user=jenkins
+    key="{{ lookup('file', '/tmp/jenkins.authorized_keys') }}"
 
 - name: "user: git config"
   sudo: yes
   sudo_user: jenkins
-  copy: src=gitconfig dest=/home/jenkins/.gitconfig owner=jenkins group=jenkins
+  copy:
+    src=gitconfig
+    dest=/home/jenkins/.gitconfig
+    owner=jenkins
+    group=jenkins
 
 - name: "~/.buildout: create main folder"
   sudo: yes
   sudo_user: jenkins
-  file: path=/home/jenkins/.buildout state=directory owner=jenkins group=jenkins
+  file:
+    path=/home/jenkins/.buildout
+    state=directory
+    owner=jenkins
+    group=jenkins
 
 - name: "~/.buildout: create subfolders"
   sudo: yes
   sudo_user: jenkins
-  file: path=/home/jenkins/.buildout/{{ item }} state=directory owner=jenkins group=jenkins
+  file:
+    path=/home/jenkins/.buildout/{{ item }}
+    state=directory
+    owner=jenkins
+    group=jenkins
   with_items:
     - eggs
     - downloads
@@ -34,4 +50,8 @@
 - name: "~/.buidlout: default.cfg"
   sudo: yes
   sudo_user: jenkins
-  copy: src=etc/default.cfg dest=/home/jenkins/.buildout/default.cfg owner=jenkins group=jenkins
+  copy:
+    src=etc/default.cfg
+    dest=/home/jenkins/.buildout/default.cfg
+    owner=jenkins
+    group=jenkins
