New dependency: pdftohtml
Some packages need pdftohtml, so install it.

--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -27,6 +27,7 @@
     - wv
     # PDF support
     - poppler-utils
+    - pdftohtml
     # Extract pypi packages
     - libbz2-dev
     # Code analysis
