--- a/tasks/nodejs.yml
+++ b/tasks/nodejs.yml
@@ -18,7 +18,7 @@
   sudo: yes
   sudo_user: jenkins
   shell:
-    ls /tmp | grep node-v
+    ls /tmp | grep node-v | sort | head -n1
   register: node_dir
 
 - name: "user: create .local folder"
