--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -46,6 +46,7 @@
   with_items:
     - eggs
     - downloads
+    - extends-cache
 
 - name: "user: add default.cfg buildout config file"
   sudo: yes
