--- a/files/default.cfg
+++ b/files/default.cfg
@@ -1,3 +1,4 @@
 [buildout]
 eggs-directory = /home/jenkins/.buildout/eggs
 download-directory = /home/jenkins/.buildout/downloads
+extends-cache = /home/jenkins/.buildout/extends
