Use 'become' instead of 'sudo'

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,7 @@
 - include: pillow.yml
 
 - name: "system: install python packages (globally)"
-  sudo: yes
+  become: yes
   pip:
     name={{item}}
   with_items:
