--- a/tasks/browsers.yml
+++ b/tasks/browsers.yml
@@ -8,16 +8,21 @@
     name=firefox
     state=absent
 
-- name: "Browsers: firefox: download version 34"
-  shell:
-    wget http://downloads.sourceforge.net/project/ubuntuzilla/mozilla/apt/pool/main/f/firefox-mozilla-build/firefox-mozilla-build_34.0.5-0ubuntu1_amd64.deb?r=http%3A%2F%2Fsourceforge.net%2Fprojects%2Fubuntuzilla%2Ffiles%2Fmozilla%2Fapt%2Fpool%2Fmain%2Ff%2Ffirefox-mozilla-build%2Ffirefox-mozilla-build_34.0.5-0ubuntu1_amd64.deb
-    chdir=/tmp/
+- name: "Browsers: firefox: install system dependencies"
+  apt:
+    pkg=firefox
+    state=build-dep
+
+- name: "Browsers: firefox: download"
+  get_url:
+    url="https://sourceforge.net/projects/ubuntuzilla/files/mozilla/apt/pool/main/f/firefox-mozilla-build/{{ firefox_file_name }}"
+    dest=/tmp
+    checksum="sha512:{{ firefox_checksum }}"
 
 - name: "Browsers: firefox: install"
   become: yes
   apt:
-    deb=/tmp/firefox-mozilla-build_34.0.5-0ubuntu1_amd64.deb\?r\=http%3A%2F%2Fsourceforge.net%2Fprojects%2Fubuntuzilla%2Ffiles%2Fmozilla%2Fapt%2Fpool%2Fmain%2Ff%2Ffirefox-mozilla-build%2Ffirefox-mozilla-build_34.0.5-0ubuntu1_amd64.deb
-
+    deb="/tmp/{{ firefox_file_name }}"
 
 # PhantomJS
 - name: "Browsers: install PhantomJS"
