Create virtualenv with pygithub in it

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,9 @@
 # Node.js
 - include: nodejs.yml
 
+# Create virtual environments
+- include: venv.yml
+
 # Browsers (firefox, et al)
 - include: browsers.yml
 
